@@ -1,3 +1,9 @@
+*Date*  OpenJAUSv3.3c
+
+	* Note * All issue #'s now indicate GoogleCode issues (trac ticket #'s no longer used)
+
+	* Issue #44: Fixed possible seg faults in system tree (strlen(NULL))
+
 2009-09-08  OpenJAUSv3.3.0b
 	
 	* Added toString functions for all messages and types in libjaus
